CHANGES
*******

0.10 (unreleased)
=================

- Updated test suite to work with Morepath 0.15.


0.9 (2016-04-25)
================

- Depend on ``morepath.directive`` for ``RegRegistry`` as this is now
  the official public API for extension of Morepath.

0.8.1 (2016-04-20)
==================

- There was a bug in 0.8 that used Reg's Registry instead of
  ``morepath.app.RegRegistry``. This could in some circumstances
  lead to the wrong registry being installed.

0.8 (2016-04-08)
================

- Adjust to work with Morepath 0.13+ (and Dectate).

0.7 (2015-01-14)
================

- Can pass a custom ``renderer`` argument to ``request.include()``, to
  support this feature added in BowerStatic 0.8.

  http://bowerstatic.readthedocs.org/en/latest/integrating.html#custom-renderer

0.6 (2014-11-15)
================

- Use BowerStatic 0.7, which makes Tween-based integration much
  simpler.

- There was a bug where references were injected but not actually
  properly published.

0.5 (2014-11-13)
================

- It is no longer necessary to wrap the application with Bower using
  WSGI. Instead a tween is used. To migrate, simply replace the
  following::

    wsgi = bower.wrap(App())
    morepath.run(wsgi)

  With this::

    morepath.run(App())

- Requires Morepath 0.8 and Bowerstatic 0.6.

0.4 (2014-11-03)
================

- Adjust to handle Morepath 0.7 API changes concerning request
  construction.

0.3 (2014-09-08)
================

- The 0.2 introduced a ``component`` method to obtain a component object
  and thus its URL. This didn't turn out to be compatible with local
  components, so I've changed it to ``get_component`` instead::

    request.static_components.get_component('jquery').url()

- Depend on version 0.4 of BowerStatic.

0.2 (2014-08-28)
================

- Make available a ``static_components`` property on the request,
  which is a BowerStatic static components object. You can use