@@ -1,10 +1,18 @@
 [tox]
-envlist = py27,pypy,py34
+envlist = py27,py33,py34,py35,pypy,pypy3,pep8
 
 [testenv]
-deps=
-    -e{toxinidir}[test]
-commands=py.test {posargs}
+deps = -e{toxinidir}[test]
+commands = py.test {posargs}
 
-[flake8]
-ignore = N801
+[testenv:py35]
+commands = py.test --cov more.static --cov-report term-missing --cov-fail-under=100 {posargs}
+
+[testenv:pep8]
+basepython = python3.5
+deps = {[testenv]deps}
+       flake8
+commands = flake8 more setup.py
+
+[pytest]
+testpaths = more/static
