@@ -6,6 +6,11 @@ CHANGES
 
 - Updated test suite to work with Morepath 0.15.
 
+- Set up integration with Travis CI.
+
+- Added Tox environments for Python 3.3 and 3.5, PyPy 3, PEP8.
+
+- Using Python 3.5 for PEP8 and coverage.
 
 0.9 (2016-04-25)
 ================
